# Qt-simple-calculator

./: Button.qml  CMakeLists.txt  Display.qml  LICENSE  README.md  StackLayout.qml  calculator.js  calculator.pro  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  simple_calculator.pro
